// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvbButton should render 1`] = `
Object {
  "$attrs$": Object {
    "class": "",
    "disabled": false,
    "onBlur": [Function],
    "onFocus": [Function],
    "type": "button",
  },
  "$children$": Array [
    Object {
      "$attrs$": null,
      "$children$": null,
      "$elm$": undefined,
      "$flags$": 0,
      "$key$": undefined,
      "$name$": undefined,
      "$tag$": "slot",
    },
  ],
  "$elm$": undefined,
  "$flags$": 0,
  "$key$": undefined,
  "$name$": undefined,
  "$tag$": "button",
}
`;

exports[`EvbButton should render as a link 1`] = `
Object {
  "$attrs$": Object {
    "class": "",
    "disabled": false,
    "href": "/assets/nice.gif",
    "onBlur": [Function],
    "onFocus": [Function],
  },
  "$children$": Array [
    Object {
      "$attrs$": null,
      "$children$": null,
      "$elm$": undefined,
      "$flags$": 0,
      "$key$": undefined,
      "$name$": undefined,
      "$tag$": "slot",
    },
  ],
  "$elm$": undefined,
  "$flags$": 0,
  "$key$": undefined,
  "$name$": undefined,
  "$tag$": "a",
}
`;

exports[`EvbButton should render as a reset button 1`] = `
Object {
  "$attrs$": Object {
    "class": "",
    "disabled": false,
    "onBlur": [Function],
    "onFocus": [Function],
    "type": "reset",
  },
  "$children$": Array [
    Object {
      "$attrs$": null,
      "$children$": null,
      "$elm$": undefined,
      "$flags$": 0,
      "$key$": undefined,
      "$name$": undefined,
      "$tag$": "slot",
    },
  ],
  "$elm$": undefined,
  "$flags$": 0,
  "$key$": undefined,
  "$name$": undefined,
  "$tag$": "button",
}
`;

exports[`EvbButton should render with Props 1`] = `
Object {
  "$attrs$": Object {
    "class": "ghost pill",
    "disabled": false,
    "onBlur": [Function],
    "onFocus": [Function],
    "type": "submit",
  },
  "$children$": Array [
    Object {
      "$attrs$": null,
      "$children$": null,
      "$elm$": undefined,
      "$flags$": 0,
      "$key$": undefined,
      "$name$": undefined,
      "$tag$": "slot",
    },
  ],
  "$elm$": undefined,
  "$flags$": 0,
  "$key$": undefined,
  "$name$": undefined,
  "$tag$": "button",
}
`;
